--- a/src/index.css
+++ b/src/index.css
@@ -564,7 +564,16 @@ body {
   .total-card{
     background: #fff;
     padding: 2em;
-  
+    border: 1px solid #7c1575;
+    border-radius: 5px;
+  }
+
+  .total-card > h4{
+font-size: 24px;
+font-weight: 500;
+line-height: 24px;
+text-align: left;
+
   }
 
   .total-details{
@@ -578,6 +587,14 @@ body {
     display: flex;
     justify-content: space-between;
     gap: 5em;
+  }
+
+  .checkout{
+    margin: 0 auto;
+    background: #f6cfa0;
+    padding: 1em;
+    margin-top: 1em;
+  
   }
 
 }
