--- a/src/index.css
+++ b/src/index.css
@@ -458,7 +458,7 @@ body {
     border-right: solid lightgray;
     border-radius: 10px;
     opacity: 0px;
-    font-family: Inter;
+    font-family: 'Inter';
     font-size: 16px;
     font-weight: 400;
     line-height: 19.36px;
@@ -620,9 +620,95 @@ margin-top: -2em;
   .nothing-card{
     margin: 0 auto;
     text-align: center;
+    background: linear-gradient(180deg, #fec1fa 20.14%, #f6d6e8 59.7%);
+
   }
 
   .nothing-wrapper{
-margin-top: 5em;
+display: flex;
+flex-direction: column;
+gap: 1em;
   }
+
+  .nothing-image{
+    display: flex;
+    justify-content: center;
+    margin-top: 2em;
+  }
+
+  .nothing-here{
+    max-width: 100%;
+    height: 100%;
+  }
+
+  .question-mark{
+    max-width: 50%;
+    height: 40%;
+  }
+
+  .nothing-wrapper > h4 {
+font-size: 40px;
+font-weight: 700;
+line-height: 48.41px;
+margin-top: 2em;
+  }
+
+  .nothing-wrapper > p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19.36px;  
+  }
+
+  .success-tab{
+   margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    width: 704px;
+height: 604px;
+padding-bottom: 5em;
+gap: 1em;
+border-radius: 30px;
+opacity: 0px;
+background: red;
+  }
+
+  .success-icon{
+    width: 70%;
+    text-align: center;
+    margin: 0 auto;
+  }
+.ok{
+  text-align: center;
+  justify-content: center;
+}
+
+.success-text{
+  font-family: 'Inter';
+font-size: 64px;
+font-weight: 600;
+line-height: 77.45px;
+color: #7c1575;
+margin-top: -2em;
+}
+
+
+.success-paragraph{
+  margin: 0 auto;
+font-family: 'Josefin Sans';
+font-size: 16px;
+font-weight: 400;
+line-height: 16px;
+width: 50%;
+text-align: left;
+}
+
+.ok{
+  font-family: 'Inter';
+font-size: 40px;
+font-weight: 600;
+line-height: 48.41px;
+color: #7c1575;
+}
 }
