--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@ h2 {
 }
 
 .header-content > h4 {
-  width: 26%;
+  width: 28%;
 }
 
 .header-description {
@@ -95,10 +95,22 @@ button {
   cursor: pointer;
   border: none;
 }
-
+/* 
 .cart-icon {
   position: absolute;
   margin-left: -3%;
+} */
+
+.cart-container {
+  position: absolute;
+  left: 82%;
+}
+
+.cart-counter {
+  position: absolute;
+  margin-left: -3em;
+  color: red;
+  font-weight: 700;
 }
 
 .lets-talk {
@@ -109,16 +121,19 @@ button {
   background: #f6cfa0;
   margin-top: 4em;
   margin-left: 10em;
+  height: 24px;
+  padding: 0;
 }
 
 .tag {
+  max-width: 14.5%;
   position: absolute;
   margin-top: -2em;
   margin-left: -0.3em;
 }
 
 .services-container {
-  margin-top: 15%;
+  margin-top: 20%;
 }
 
 .services-top {
@@ -176,7 +191,7 @@ h3 {
 
 .specials-container {
   margin: 0em 3em;
-  margin-top: 9em;
+  margin-top: -3em;
 }
 
 .specials-header > h3,
@@ -327,19 +342,16 @@ span {
 
 .feedback-container {
   margin: 5em 3em;
-  
 }
 
 .feedback-container > h3 {
   text-align: center;
-  
 }
 
 .review {
   box-shadow: 0px 8px 32px 0px #adadad29;
   padding: 1em;
   margin-top: 2em;
- 
 }
 .review-scroll {
   padding: 24px 16px 24px 16px;
@@ -359,8 +371,6 @@ span {
   top: 2em;
   left: -6px;
 }
-
-
 
 .review-text {
   margin-top: 2.5em;
@@ -752,9 +762,210 @@ textarea {
   line-height: 48.41px;
   color: #7c1575;
 }
-/* } */
+@media only screen and (width >2022px) {
+  .services-container {
+    padding-top: 5em;
+  }
+}
 
-@media only screen and (width < 600px) {
+@media only screen and (width > 1513px) {
+  .header-content {
+    margin-top: 19%;
+  }
+
+  .purp-circle {
+    max-width: 30%;
+    margin-top: -10em;
+  }
+
+  .header-content > h2 {
+    font-size: 58px;
+    line-height: 62px;
+    width: 30%;
+  }
+
+  .header-content > h4 {
+    width: 28%;
+    font-size: 20px;
+  }
+  .purp-circle {
+    margin-left: 5em;
+    width: 100%;
+    margin-top: -10em;
+  }
+  .lets-talk2 {
+    margin-left: 15em;
+  }
+  .event-image1 {
+    max-width: 20%;
+  }
+
+  .event-card > img {
+    width: 100%;
+  }
+  .services-container {
+    margin: 0% 10%;
+    margin-top: 17%;
+  }
+
+  .services-bottom {
+    margin: 1em 3em;
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .food-item-container {
+    place-items: center;
+  }
+
+  .services-paragraph {
+    width: 50%;
+  }
+
+  .cart-container {
+    position: absolute;
+    left: 91%;
+  }
+
+  .review-inner-carousel {
+    margin: 0 20em;
+  }
+
+  .food-item-container {
+    margin: 3em 20em;
+  }
+}
+
+@media only screen and (width > 680px) and (width <1220px) {
+  .header-top {
+    margin: 1em 2em;
+  }
+  .food-item-container,
+  .review-scroll {
+    display: grid;
+    place-items: center;
+    grid-template-columns: 2fr 2fr;
+  }
+
+  .header-content {
+    position: relative;
+    margin: 0 auto;
+    margin-top: 15%;
+  }
+
+  .header-content > h2,
+  .header-content > h4 {
+    margin-left: 8%;
+  }
+
+  .header-content > h2 {
+    font-size: 28px;
+    line-height: 25px;
+    width: 33%;
+  }
+
+  .header-content > h4 {
+    width: 33%;
+    font-size: 12px;
+  }
+
+  .purp-circle {
+    margin: -5em 3em;
+    max-width: 35%;
+  }
+
+  .tag {
+    margin-top: -1.5em;
+  }
+
+  .lets-talk2 {
+    margin-top: 10px;
+  }
+
+  .event-image1 {
+    position: absolute;
+    max-width: 30%;
+    height: auto;
+    left: 65%;
+  }
+
+  .services-container {
+    margin-top: 15em;
+  }
+
+  .specials-container {
+    margin-top: -5em;
+  }
+
+  .add-cart {
+    margin-top: 1.5em;
+  }
+
+  .services-paragraph {
+    width: 50%;
+  }
+}
+
+@media only screen and (width > 700px) and (max-width: 999px) {
+  .services-container {
+    margin-top: 20%;
+  }
+  .services-top > .event-card {
+    width: 100%;
+  }
+
+  .services-paragraph {
+    width: 90%;
+  }
+
+  .event-overlay {
+    text-align: center;
+    margin-top: -3em;
+    color: #fff;
+  }
+  .event-card > img {
+    width: 250px;
+  }
+
+  .cart-container {
+    margin-right: -40%;
+  }
+
+  .services-paragraph {
+    width: 50%;
+  }
+
+  .services-bottom {
+    margin: 1em 3em;
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    gap: 4em;
+    place-items: center;
+  }
+
+  .specials-container {
+    margin-top: -7em;
+  }
+
+  .specials-header > p {
+    width: 80%;
+  }
+
+  .cart-container {
+    position: absolute;
+    left: 75%;
+  }
+
+  .event-image1 {
+    position: absolute;
+    max-width: 30%;
+    height: auto;
+    left: 60%;
+    margin-top: 2.2em;
+  }
+}
+
+@media only screen and (max-width: 700px) {
   .desktop {
     display: none;
   }
@@ -783,38 +994,38 @@ textarea {
   }
 
   .logo {
-    max-width: 50%;
-    margin-left: -10%;
+    max-width: 30%;
+    margin-left: -5%;
   }
 
   .purp-circle {
-    margin: -5em 1em;
+    margin: -7em 3em;
     z-index: -1;
-    max-width: 90%;
+    max-width: 60%;
     position: absolute;
   }
 
   .header-content {
+    position: relative;
     margin: 0 auto;
-    margin-top: 13em;
+    margin-top: 50%;
   }
 
   .header-content > h2,
   .header-content > h4 {
     text-align: left;
-    margin-left: 11%;
+    margin-left: 13%;
   }
 
   .header-content > h2 {
-    width: 90%;
-
+    width: 50%;
     font-size: 24px;
     font-weight: 700;
     line-height: 24px;
   }
 
   .header-content > h4 {
-    width: 80%;
+    width: 40%;
     font-size: 12px;
     font-weight: 600;
     line-height: 12px;
@@ -825,16 +1036,22 @@ textarea {
     font-size: 20px;
     line-height: 20px;
   }
+  .tag {
+    position: absolute;
+    margin-top: -1.5em;
+    margin-left: -0.3em;
+    max-width: 25%;
+  }
+
+  .services-container {
+    margin-top: 23rem;
+  }
 
   .services-paragraph {
     font-size: 12px;
     line-height: 19.86px;
-
+    padding: 1em 5em;
     width: 100%;
-  }
-
-  .services-container {
-    margin-top: 9em;
   }
 
   .services-top {
@@ -846,6 +1063,12 @@ textarea {
 
   .services-top > .event-card {
     width: 100%;
+  }
+  .event-image1 {
+    position: relative;
+    width: 50%;
+
+    left: 0%;
   }
 
   .services-bottom {
@@ -863,6 +1086,17 @@ textarea {
     font-size: 12px;
     line-height: 19.86px;
     width: 100%;
+    padding: 1em 4em;
+  }
+
+  .event-card {
+    margin: 0 auto;
+    max-width: 60%;
+    height: auto;
+  }
+
+  .event-overlay {
+    margin-top: -29px;
   }
 
   .book-us {
@@ -917,7 +1151,7 @@ textarea {
     padding: 3px;
     gap: 4.57px;
     border-radius: 6.86px;
-    margin-top: 0.5em;
+    margin-top: 1em;
   }
 
   .plus-icon {
@@ -961,13 +1195,6 @@ textarea {
     margin: 0 auto;
     margin-top: 2em;
     margin-left: 23%;
-  }
-
-  .tag {
-    position: absolute;
-    margin-top: -1em;
-    margin-left: -0.3em;
-    max-width: 30%;
   }
 
   .services2-container {
@@ -1025,7 +1252,6 @@ textarea {
     margin: 2em 2em;
   }
 
-  
   .review-carousel {
     position: relative;
     overflow: hidden;
@@ -1043,28 +1269,26 @@ textarea {
     width: 300%; /* Width is 3 times the container width to fit all cards */
     transition: transform 0.5s ease; /* Smooth transition for sliding */
     gap: 2em;
-    
   }
 
   .review {
     box-sizing: border-box;
-  
+
     gap: 1em;
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     background-color: #fff;
-padding: 10px 16px;
-gap: 16px;
-border-radius: 24px;
-width: 306px;
-
+    padding: 10px 16px;
+    gap: 16px;
+    border-radius: 24px;
+    width: 306px;
   }
 
   .review-top {
     display: flex;
     align-items: center;
     margin-top: 3em;
-   gap: 3em;
+    gap: 3em;
   }
 
   .profile-name {
@@ -1095,7 +1319,6 @@ width: 306px;
     line-height: 1.5;
     color: #323434;
     text-align: center;
-
   }
 
   .active-review {
@@ -1279,35 +1502,35 @@ width: 306px;
   .cart-list {
     margin: 0 auto;
     flex-direction: column;
-    padding: 2em;
+    padding: 1em;
     gap: 4em;
   }
   .cart-detail {
     margin: 0 auto;
     display: flex;
     justify-content: center;
-    gap: 2em;
-    font-size: 12px;
-    font-weight: 500;
-    line-height: 12px;
+    gap: 1.5em;
     text-align: center;
     margin-left: -2em;
   }
-  /* 
 
+  .cart-detail > p {
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 12px;
+  }
 
   .trash-box {
-
-   position: relative;
-   left: 16%;
+    position: absolute;
+    right: 10%;
+    height: 48px;
   }
-  */
 
   .trash {
     position: relative;
     width: 19px;
     height: 24px;
-    margin-top: 0.1em;
+    margin-top: -0.3em;
     margin-left: -1em;
   }
 
@@ -1318,29 +1541,29 @@ width: 306px;
   .product-details {
     display: flex;
     margin: 0 auto;
-    gap: 1.5em;
+    gap: 1.9em;
     margin-top: 1em;
+    margin-left: 0em;
     border: 1px solid #7c1575;
     height: 48px;
-    width: 100%;
+    width: 90%;
     border-radius: 5px;
   }
   .product {
-    width: 120px;
-    height: 41px;
+    width: 40%;
   }
 
   .cart-image {
     position: absolute;
     width: 41px;
     height: 41px;
-    margin-left: 0.5em;
-    margin-top: -1.6em;
+    margin-left: 1em;
+    margin-top: -1.9em;
   }
 
   .product > p {
     margin-left: 6em;
-    margin-top: -2em;
+    margin-top: -2.5em;
     font-size: 10px;
     font-weight: 400;
     line-height: 10px;
@@ -1354,6 +1577,10 @@ width: 306px;
     line-height: 12.1px;
     margin-top: 1em;
   }
+  .price,
+  .total {
+    margin-top: 2em;
+  }
 
   .product,
   .quantity,
@@ -1362,9 +1589,44 @@ width: 306px;
     margin-left: -1em;
   }
 
+  .quantity {
+    margin-left: -3em;
+  }
+
   .quantity-box {
-    width: 22px;
+    width: 100%;
     height: 26px;
+  }
+
+  .quantity-box > p {
+    margin-left: -0.2em;
+  }
+
+  .total-card {
+    margin-top: -1em;
+    width: 100%;
+    height: auto;
+  }
+
+  .total-card > h4 {
+    font-size: 16px;
+  }
+
+  .total-card {
+    p {
+      font-size: 10px;
+    }
+  }
+
+  .total-details {
+    gap: 1.4em;
+  }
+
+  .checkout {
+    padding: 0em;
+    margin-top: 0em;
+    height: 24px;
+    width: 84px;
   }
 
   .nothing-wrapper > h4 {
@@ -1387,16 +1649,142 @@ width: 306px;
   .nothing-wrapper {
     padding: 3em;
   }
-
 }
 
+@media only screen and (width >390px) and (width < 701px) {
+  .header-content {
+    margin-top: 15em;
+  }
 
-@media only screen and (width > 399px)and(max-width : 600px){
+  .header-content > h2 {
+    width: 50%;
+  }
+  .header-content > h4 {
+    width: 65%;
+  }
 
+  .tag {
+    margin-top: -1.3em;
+  }
+  .header-content > h2,
+  .header-content > h4 {
+    margin-left: 12%;
+  }
+  .purp-circle {
+    margin: -6em 2em;
+    z-index: -1;
+    max-width: 310px;
+    position: absolute;
+  }
+  .services-container {
+    margin-top: 30%;
+    margin-left: 0;
+  }
 
+  .services-paragraph {
+    width: 100%;
+    padding: 0;
+  }
+
+  .event-overlay {
+    margin-top: -25px;
+  }
 }
 
+@media only screen and (width < 390px) {
+  .header-content > h2,
+  .header-content > h4 {
+    margin-left: 10%;
+  }
+  .header-content {
+    margin: 0 auto;
+    margin-top: 13em;
+  }
+  .header-content > h2 {
+    width: 90%;
+  }
 
+  .header-content > h4 {
+    width: 80%;
+  }
 
+  .tag {
+    position: absolute;
+    margin-top: -1.2em;
+    max-width: 35%;
+  }
+  .purp-circle {
+    margin: -6em 1em;
+    z-index: -1;
+    max-width: 90%;
+  }
 
+  .lets-talk2 {
+    padding: 0em;
+    height: 24px;
+  }
 
+  .specials-header > p {
+    padding: 1em;
+  }
+
+  .services-container {
+    margin-top: 55%;
+  }
+  .services-paragraph {
+    font-size: 12px;
+    line-height: 19.86px;
+    padding: 0em 0em;
+    width: 100%;
+  }
+
+  .event-card {
+    margin: 0 auto;
+    max-width: 90%;
+    height: auto;
+  }
+
+  .event-overlay {
+    margin-top: -25px;
+  }
+
+  .trash-box {
+    position: absolute;
+    right: 1%;
+    height: 48px;
+  }
+
+  .product-details {
+    width: 100%;
+  }
+
+  .cart-detail {
+    margin-left: 0em;
+  }
+
+  .footer-container {
+    margin: 0 auto;
+    text-align: center;
+    flex-direction: column;
+    gap: 1em;
+    padding: 2em 0em;
+  }
+
+  .whatsapp-button {
+    width: 175px;
+    height: 47px;
+    border-radius: 10px;
+    background: #f6cfa0;
+    text-align: center;
+    padding: 0.7em;
+  }
+
+  .footer-down > p {
+    margin-left: -0.1em;
+  }
+
+  .footer-flex {
+    width: 100%;
+    margin-left: 0.5%;
+  }
+}
